--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-video": "^5.2.1",
-    "expo-av": "~13.4.1"
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
