--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-quick-sqlite": "^8.0.6",
     "react-native-video": "^5.2.1"
   },
   "devDependencies": {
